# file-transfer

./: Cargo.toml  index.html  package-lock.json  package.json
.github/workflows/: github-pages.yml
css/: app.scss  footer.scss  header.scss  main.scss  menu.scss  theme.scss
src/: main.rs  peerjs.rs  script.js  utils.rs
src/components/: app.rs  footer.rs  header.rs  menu.rs  mod.rs  receive.rs  send.rs  settings.rs
src/peerjs/: client.rs  dataconnection.rs  ffi.rs  mod.rs  peerid.rs
